--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,43 @@
-body {
-    font-family: Arial, sans-serif;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+    /*Cores*/
+
+    --azul_escuro: #000320;
+    --azul_claro: #6A74CB;
+    --claro: #F4F5FF;
+
+    font-family: 'Manrope', sans-serif;
 }
 
+body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+
+}
+
+header {
+    background-color: var(--azul_escuro);
+    height: 100vh;
+    overflow: hidden;
+}
+
+h1 {
+}
+
+h4{
+    color: var(--claro);
+}
+body {
+    font-family: Manrope, sans-serif;
+}
+main{
+    width:70%;
+    height:auto;
+}
 #content {
     max-width: 800px;
     margin: 20px auto;
