--- a/styles.css
+++ b/styles.css
@@ -24,13 +24,11 @@ body {
 
 }
 
-header {
+header{
     background-color: var(--azul_escuro);
     height: 100vh;
     overflow: hidden;
 }
-
-h1 {}
 
 h4 {
     color: var(--claro);
@@ -85,13 +83,25 @@ hr {
     top: -5vh;
 }
 
-#content {
+#headerimg{
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.apod-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+}
+
+/* #content {
     max-width: 800px;
     margin: 20px auto;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
-}
+} */
 
 .category-btn {
     background-color: var(--claro);
@@ -162,4 +172,42 @@ hr {
 #categorySelect3{
     grid-column:7/ span 3;
     grid-row: 2/ span 1;
+}
+#size{
+    background-color: brown;
+    width: 250px;
+    height: 250px;
+}
+
+#contentapod{
+    display: grid;
+    gap: 10px;
+    padding: 7%;
+    background-color: #6A74CB;
+    grid-template-columns: repeat(12, 1fr);
+    /*grid-template-rows: repeat(6, 1fr);*/
+    width: 100vw;
+    height: 100%;
+}
+.apod-title{
+    grid-column: 1 / span 6;
+    grid-row: 1/ span 1;
+    height: fit-content;
+}
+.apod-date{
+    grid-column: 1 / span 6;
+    grid-row: 2/ span 1;
+    height: fit-content;
+}
+.image2Apod{
+    grid-column: 6 / span 6;
+    grid-row: 1/ span 1;
+    height: fit-content;
+
+    
+}
+.apod-explanation{
+    grid-column: 1 / span 4;
+    grid-row: 3/ span 1;
+    height: fit-content;
 }
