--- a/styles.css
+++ b/styles.css
@@ -31,14 +31,24 @@ header {
     overflow: hidden;
 }
 
+h2 {
+    font-size: 2.1rem;
+    color: var(--azul_escuro);
+    margin-left: 7%;
+    margin-top: 7%;
+
+}
+
+h3 {
+    color: var(--azul_escuro);
+}
+
 h4 {
     color: var(--claro);
 }
 
-
-
 main {
-    width: 70%;
+  /*  width: 70%;*/
     height: auto;
 }
 
@@ -115,7 +125,6 @@ hr {
     display: grid;
     gap: 10px;
     padding: 7%;
-   /* background-color: #6A74CB;*/
     grid-template-columns: repeat(12, 1fr);
     /* grid-template-rows: repeat(6, 1fr); */
     width: 100vw;
@@ -142,6 +151,7 @@ hr {
     margin-left: 35%;
     margin-top: -10%;
 }
+
 .image2Apod {
     grid-column: 6 / span 5;
     height: fit-content;
@@ -178,9 +188,10 @@ hr {
 }
 
 .category-btn:active {
-    background-color: var(--azul_claro); 
-    color: var(--claro); 
+    background-color: var(--azul_claro);
+    color: var(--claro);
 }
+
 .category {
     background-color: var(--claro);
     height: 5vh;
@@ -260,7 +271,11 @@ hr {
 
 #apod-container {
     width: 100%;
-    margin-left: 15%;
+    /* margin-left: 15%; */
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
 }
 
 .discoverapodlist {
@@ -271,7 +286,7 @@ hr {
     gap: 10px;
     margin: 7%;
     border-radius: 5px;
-    width: 100%;
+    width: 70%;
 }
 
 .imgdiscover-container {
@@ -316,7 +331,12 @@ hr {
     height: fit-content;
     cursor: pointer;
 }
+
 /*--------------------------------SEARCH APOD-------------------------------*/
+#displaysearch {
+    display: flex;
+    justify-content: center;
+}
 #displayresult {
     display: grid;
     background-color: var(--azul_claro2);
@@ -327,18 +347,22 @@ hr {
     padding: 4%;
     justify-content: center;
     justify-items: start;
-    margin-left: 40%;
+    /* margin-left: 40%; */
+    width: 50%;
 }
+
 .searchtitle {
     grid-column: 2/ span 10;
     grid-row: 1/ span 1;
     height: fit-content;
 }
+
 .searchdate {
     grid-column: 2/ span 10;
     grid-row: 2/ span 1;
     height: fit-content;
 }
+
 .containersearchIMG {
     width: 350px;
     height: 350px;
@@ -346,15 +370,43 @@ hr {
     grid-column: 5 / span 2;
     grid-row: 3 /span 1;
 }
-img.searchimg {
+
+.searchimg {
     width: 100%;
     height: 100%;
     border-radius: 5px;
     object-fit: cover;
     /* margin: 4%; */
 }
-p.searchexplanation {
+
+.searchexplanation {
     grid-column: 2/ span 8;
     grid-row: 6/ span 1;
     height: fit-content;
 }
+
+/* RESPONSIVIDADE DESKTOP*/
+@media screen and (min-width: 980px) {}
+
+/* INTERMÉDIO/ TABLETS*/
+@media screen and (min-width: 600px) and (max-width: 980px) {
+
+    .containerAPODimg {
+        grid-column: 6 / span 5;
+        grid-row: 3 / span 6;
+        width: 270px;
+        height: 270px;
+        object-fit: cover;
+        margin-left: 25%;
+    }
+    .apod-explanation {
+        grid-column: 1 / span 6;
+        grid-row: 3/ span 1;
+        height: fit-content;
+        font-size: 0.9rem;
+    }
+
+}
+
+/*MOBILE TELEMOVEL*/
+@media screen and (max-width: 600px) {}
