--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ h4 {
 }
 
 main {
-  /*  width: 70%;*/
+    /*  width: 70%;*/
     height: auto;
 }
 
@@ -134,6 +134,7 @@ hr {
     height: fit-content;
 }
 
+/*
 .containerAPODimg {
     grid-column: 6 / span 5;
     width: 350px;
@@ -141,7 +142,7 @@ hr {
     object-fit: cover;
     margin-left: 35%;
     margin-top: -10%;
-}
+}*/
 
 .image2Apod {
     grid-column: 6 / span 5;
@@ -328,6 +329,7 @@ hr {
     display: flex;
     justify-content: center;
 }
+
 #displayresult {
     display: grid;
     background-color: var(--azul_claro2);
@@ -377,7 +379,16 @@ hr {
 }
 
 /* RESPONSIVIDADE DESKTOP*/
-@media screen and (min-width: 980px) {}
+@media screen and (min-width: 980px) {
+    .containerAPODimg {
+        grid-column: 6 / span 5;
+        width: 350px;
+        height: 350px;
+        object-fit: cover;
+        margin-left: 35%;
+        margin-top: -10%;
+    }
+}
 
 /* INTERMÉDIO/ TABLETS*/
 @media screen and (min-width: 600px) and (max-width: 980px) {
@@ -390,6 +401,7 @@ hr {
         object-fit: cover;
         margin-left: 25%;
     }
+
     .apod-explanation {
         grid-column: 1 / span 6;
         grid-row: 3/ span 1;
@@ -400,4 +412,61 @@ hr {
 }
 
 /*MOBILE TELEMOVEL*/
-@media screen and (max-width: 600px) {}
+@media screen and (max-width: 600px) {
+    h2 {
+        font-size: 2.1rem;
+        margin-left: 7%;
+        margin-top: 7%;
+        font-size: 1.65rem;
+    }
+
+    .apod-title {
+        grid-column: 1 / span 10;
+        grid-row: 1/ span 1;
+    }
+
+    .apod-date {
+        grid-column: 1 / span 6;
+        grid-row: 2/ span 1;
+    }
+
+    .containerAPODimg {
+        grid-column: 1 / span 8;
+        grid-row: 4 / span 6;
+        width: 250px;
+        height: 250px;
+    }
+
+    .apod-explanation {
+        grid-column: 1 / span 10;
+        grid-row: 12/ span 1;
+        font-size: 0.8rem;
+    }
+
+
+    /*--------------------------------SEARCH APOD-------------------------------*/
+
+    #displayresult {
+        width: 90%;
+    }
+
+    .containersearchIMG {
+        width: 250px;
+        height: 250px;
+        grid-column: 6 / span 2;
+        grid-row: 3 /span 1;
+    }
+
+    .searchtitle {
+        grid-column: 4/ span 10;
+    }
+
+    .searchdate {
+        grid-column: 4/ span 10;
+    }
+    .searchexplanation {
+        grid-column: 4/ span 6;
+        grid-row: 5/ span 1;
+        font-size: 0.8rem;
+    }
+}
