--- a/styles.css
+++ b/styles.css
@@ -469,4 +469,36 @@ hr {
         grid-row: 5/ span 1;
         font-size: 0.8rem;
     }
+    /*-----------------DISCOVER APOD --------------------------*/
+    .discoverapodlist {
+        width: 90%;
+    }
+    .titlediscoverlist {
+        grid-column: 4/ span 10;
+        grid-row: 1/ span 1;
+    }
+    .explanation-disc {
+        grid-column: 1 / span 10;
+        grid-row: 2/ span 6;
+        margin-top: 6%;
+        margin-left: 3%;
+        font-size: 0.8rem;
+    }
+    .datediscoverlist {
+        grid-column: 4 / span 8;
+        grid-row: 2/ span 1;
+        margin-top: -20%;
+        position: relative;
+    }
+    .seemore {
+        grid-column: 9 / span 5;
+        grid-row: 7/ span 4;
+        font-size: 0.8rem;
+    }
+    .imgdiscover-container {
+        width: 170px;
+        height: 170px;
+        object-fit: cover;
+        grid-column: 1 / span 2;
+    }
 }
