--- a/styles.css
+++ b/styles.css
@@ -173,7 +173,7 @@ hr {
    width: fit-content; */
     width: 80px;
     border-radius: 50px;
-    stroke: var(--azul_escuro);
+    border: 2px solid var(--azul_escuro);
     color: var(--azul_escuro);
     font-weight: 600;
     cursor: pointer;
@@ -190,7 +190,7 @@ hr {
     /*width: 20%;*/
     width: fit-content;
     border-radius: 50px;
-    stroke: var(--azul_escuro);
+    border: 2px solid var(--azul_escuro);
     color: var(--azul_escuro);
     font-weight: 600;
     cursor: pointer;
@@ -328,6 +328,7 @@ hr {
 #displaysearch {
     display: flex;
     justify-content: center;
+    margin-top: 5%;
 }
 
 #displayresult {
@@ -370,6 +371,54 @@ hr {
     border-radius: 5px;
     object-fit: cover;
     /* margin: 4%; */
+}
+
+#search-space {
+    display: flex;
+    align-items: flex-end;
+    gap: 45%;
+
+}
+#search-container {
+    display: flex;
+    gap: 5px;
+    justify-content: flex-end;
+    margin-right: 4%;
+}
+
+#search-btn{
+    border-radius: 100%;
+    height: 40px;
+    /* all: unset; */
+    background-color: var(--claro);
+    width: 40px;
+    cursor: pointer;
+    border: 2px solid var(--azul_escuro);
+   
+}
+
+#img-lupa{
+    width: 60%;
+    height: auto;
+    
+}
+#search-btn:hover {
+    background-color: var(--azul_claro);
+}
+
+
+
+#input-search {
+    padding: 10px;
+    border: 2px solid var(--azul_escuro);
+    border-radius: 20px;
+    outline: none;
+    width: 20vw;
+    background-color: var(--claro);
+}
+
+#input-search::placeholder {
+    color: var(--azul_claro); 
 }
 
 .searchexplanation {
