--- a/styles.css
+++ b/styles.css
@@ -173,10 +173,21 @@ hr {
 
 
 /*--------------------------------CATEGORIAS---------------------------------------*/
-
+#Clean {
+    all: unset;
+    cursor: pointer;
+    background: var(--azul_claro2);
+    padding: 1%;
+    border-radius: 5px;
+    font-weight: 600;
+    font-size: 0.9rem;
+}
+#Clean:hover{
+    color: var(--azul_claro);
+}
 #orderBy {
-    background-color: var(--azul_claro2);
-    height: 7vh;
+    background-color: var(--claro);
+    height: 25%;
     border-radius: 50px;
     border: 2px solid var(--azul_claro);
     font-weight: 600;
@@ -190,7 +201,7 @@ label {
 }
 .category-btn {
     background-color: var(--claro);
-    height: 7vh;
+    height: 25%;
     width: 80px;
     border-radius: 50px;
     border: 2px solid var(--azul_escuro);
@@ -203,11 +214,13 @@ label {
     background-color: var(--azul_claro);
     color: var(--claro);
 }
-
+.category-btn:hover {
+    background-color: var(--azul_claro);
+    color: var(--claro);
+}
 .category {
     background-color: var(--claro);
-    height: 7vh;
-    /*width: 20%;*/
+    height: 25%;
     width: fit-content;
     border-radius: 50px;
     border: 2px solid var(--azul_escuro);
@@ -217,7 +230,10 @@ label {
 
 
 }
-
+.category:hover {
+    background-color: var(--azul_claro);
+    color: var(--claro);
+}
 #discover-filter {
     display: flex;
     justify-content: center;
@@ -336,6 +352,8 @@ label {
     grid-row: 1/ span 4;
     height: fit-content;
     cursor: pointer;
+    font-weight: 600;
+    font-size: 0.9rem;
 }
 
 /*--------------------------------SEARCH APOD-------------------------------*/
@@ -429,6 +447,7 @@ label {
     outline: none;
     width: 20vw;
     background-color: var(--claro);
+    font-weight: 600;
 }
 
 #input-search::placeholder {
@@ -567,7 +586,6 @@ label {
         transition: 0.4s;
         border-radius: 5px;
     }
-
     .menu-toggle.open span:nth-child(1) {
         transform: rotate(-45deg) translate(-5px, 6px);
     }
