--- a/styles.css
+++ b/styles.css
@@ -592,10 +592,16 @@ label {
         display: block;
         width: 25px;
         height: 3px;
-        background-color: var(--azul_claro);
+        /*background-color: var(--azul_claro);*/
         margin: 5px 0;
         transition: 0.4s;
         border-radius: 5px;
+    }
+    .cor-span {
+        background-color: var(--claro);
+    }
+    .toggleScroll{
+        background-color: var(--azul_claro);   
     }
 
     .menu-toggle.open span:nth-child(1) {
@@ -723,6 +729,7 @@ label {
     }
 
     #orderBy {
+        padding: 0;
         height: 5vh;
         font-size: 0.9rem;
     }
