--- a/styles.css
+++ b/styles.css
@@ -62,17 +62,28 @@ nav {
     justify-content: flex-end;
     position: relative;
     top: -5vh;
-    right: 3vw;
 }
 
-.menulist {
-    display: flex;
-    gap: 4%;
+.menulist{
+    display: grid;
+    gap: 10px;
     list-style-type: none;
-    overflow: hidden;
-    width: 100%;
-    padding: 2%;
-    justify-content: flex-end;
+    padding: 7%;
+    grid-template-columns: repeat(12, 1fr);
+    width: 100vw;
+    height: 100%;
+}
+li:nth-child(1) {
+    grid-column: 1/ span 1;
+}
+li:nth-child(2) {
+    grid-column: 9/ span 2;
+}
+li:nth-child(3) {
+    grid-column: 11/ span 1;
+}
+li:nth-child(4) {
+    grid-column: 12/ span 1;
 }
 
 .menulist li a {
@@ -80,10 +91,7 @@ nav {
 }
 
 .logo {
-    width: 15%;
-    position: relative;
-    left: 5vw;
-    top: 4.2vh;
+    /*width: 15%;*/
     transition: opacity 0.3s ease;
 }
 
@@ -93,7 +101,7 @@ hr {
     width: 90%;
     margin: 0 auto;
     position: relative;
-    top: -5vh;
+    top: -17vh;
 }
 
 /*--------------------------------HEADER IMG---------------------------------------*/
@@ -243,11 +251,12 @@ label {
 
 #discover-filter {
     margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 #filters {
     display: flex;
-    gap: 10px;
+    gap: 20px;
     /* padding: 2%; */
     width: 100%;
     flex-direction: column;
@@ -272,7 +281,7 @@ label {
     grid-template-columns: repeat(12, 1fr);
     padding: 2%;
     gap: 10px;
-    margin: 7%;
+    margin: 2%;
     border-radius: 5px;
     width: 70%;
 }
@@ -419,6 +428,8 @@ label {
 @media screen and (min-width: 980px) {
 
     .h4deskt {
+        font-size: 1.2rem;
+        font-weight: 800;
         color: var(--claro);
         transition: color 0.3s ease;
     }
@@ -472,6 +483,8 @@ label {
 @media screen and (min-width: 600px) and (max-width: 980px) {
 
     .h4deskt {
+        font-size: 1.2rem;
+        font-weight: 800;
         color: var(--claro);
         transition: color 0.3s ease;
     }
@@ -597,11 +610,13 @@ label {
         transition: 0.4s;
         border-radius: 5px;
     }
+
     .cor-span {
         background-color: var(--claro);
     }
-    .toggleScroll{
-        background-color: var(--azul_claro);   
+
+    .toggleScroll {
+        background-color: var(--azul_claro);
     }
 
     .menu-toggle.open span:nth-child(1) {
@@ -741,7 +756,7 @@ label {
     }
 
     #buttons {
-        gap: 10px;
+        gap: 20px;
         width: 100%;
         flex-wrap: wrap;
     }
@@ -758,7 +773,12 @@ label {
     }
 
     #selects {
-        gap: 10px;
+
+        display: flex;
+        gap: 20px;
         width: 100%;
+        flex-direction: row;
+        flex-wrap: wrap;
+
     }
 }
