--- a/styles.css
+++ b/styles.css
@@ -64,14 +64,13 @@ nav {
     top: -5vh;
 }
 
-.menulist{
-    display: grid;
-    gap: 10px;
-    list-style-type: none;
-    padding: 7%;
-    grid-template-columns: repeat(12, 1fr);
-    width: 100vw;
-    height: 100%;
+.menulist {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    left: 0%;
+    height: 112vh;
+    background-color: var(--azul_escuro);
 }
 li:nth-child(1) {
     grid-column: 1/ span 1;
@@ -91,8 +90,11 @@ li:nth-child(4) {
 }
 
 .logo {
-    /*width: 15%;*/
-    transition: opacity 0.3s ease;
+    width: 30%;
+    position: relative;
+    /* left: 5vw; */
+    top: -20vh;
+    z-index: 15;
 }
 
 hr {
