--- a/styles.css
+++ b/styles.css
@@ -64,13 +64,14 @@ nav {
     top: -5vh;
 }
 
-.menulist {
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    left: 0%;
-    height: 112vh;
-    background-color: var(--azul_escuro);
+.menulist{
+    display: grid;
+    gap: 10px;
+    list-style-type: none;
+    padding: 7%;
+    grid-template-columns: repeat(12, 1fr);
+    width: 100vw;
+    height: 100%;
 }
 li:nth-child(1) {
     grid-column: 1/ span 1;
@@ -90,11 +91,8 @@ li:nth-child(4) {
 }
 
 .logo {
-    width: 30%;
-    position: relative;
-    /* left: 5vw; */
-    top: -20vh;
-    z-index: 15;
+    /*width: 15%;*/
+    transition: opacity 0.3s ease;
 }
 
 hr {
@@ -564,10 +562,12 @@ label {
     }
 
     .logo {
-        width: 25%;
+        /*width: 15%;*/
+        transition: opacity 0.3s ease;
+        width: 30%;
         position: relative;
-        left: 5vw;
-        top: 4.2vh;
+        /* left: 5vw; */
+        top: -20vh;
         z-index: 15;
     }
 
@@ -576,8 +576,7 @@ label {
         display: none;
         flex-direction: column;
         position: absolute;
-        left: 3%;
-        width: 100vw;
+        left: 0%;
         height: 112vh;
         background-color: var(--azul_escuro);
     }
